# uint128_t

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  uint128_t.cpp  uint128_t.include
include/: uint128.h
include/details/: uint128_storage.h
include/uint128/: endianness.h  uint128_t.h  uint128_t.include  uint128_t_config.h
lib/: CMakeLists.txt  uint128_t.cpp
src/: uint128_t.cpp
tests/: CMakeLists.txt  Makefile
tests/testcases/: accessors.cpp  add.cpp  and.cpp  assignment.cpp  constructor.cpp  div.cpp  equals.cpp  fix.cpp  functions.cpp  gt.cpp  gte.cpp  invert.cpp  leftshift.cpp  logical.cpp  lt.cpp  lte.cpp  mod.cpp  mult.cpp  notequals.cpp  or.cpp  rightshift.cpp  sub.cpp  type_traits.cpp  typecast.cpp  unary.cpp  xor.cpp
